--- a/Subscribe.html
+++ b/Subscribe.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html>
-   <head>
+<body>
 
-   </head>
-   
-   <body>
+<h2 style="text-align: center;"> Registration form  </h2>
 
-   </body>
+<form action="Form.php">
+
+
+
+ Student Name  : <label> </label>
+ <select name="MR.">
+
+    <option value="male"> MR. </option>
+    <option value="female"> M. </option>
+
+
+ </select>
+  <input type="text" name="Name" value=""  placeholder="Enter your name"> <br> 
+<br>
+Password:       <input type="text" name="Password" value="" placeholder="Enter your Password" > <br>
+<br>
+Father's Name:  <input type="text" name="Father_Name" value="" placeholder="Enter your Father's Name">  <br>
+<br>
+Mother's Name : <input type="text" name="Mother's_Name" value="" placeholder="Enter your Mother's Name">
+
+
+                          <br>
+ <br> <label for="start">Date of birth :
+
+<input type="date" id="start" name="trip-start"
+       value="2018-07-22"
+       min="2018-01-01" max="2018-12-31">
+       <br>
+       <label> <br>  Gender:    </label>   
+         <input type="radio" id="gender" name="gender" value="male"/> Male    
+         <input type="radio" id="gender" name="gender" value="female"/> Female  
+
+      </label>
+
+
+
+</form>
+
+</body>
 </html>
-
-
-
-
