--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
 <a href="https://example.com"> <h2> <br> Reciepes </br> </h2> </a>
    
 
- <a href="https://example.com"> <h2> <br> Subscribe </br> </h2>  </a> 
+ <a href="file:///C:/Users/Djozef/Desktop/Project%20HTML/Subscribe.html"> <h2> <br> Subscribe </br> </h2>  </a> 
  
 
 </html>
