--- a/Subscribe.html
+++ b/Subscribe.html
@@ -26,17 +26,48 @@ Mother's Name : <input type="text" name="Mother's_Name" value="" placeholder="En
 
 
                           <br>
- <br> <label for="start">Date of birth :
+ <br> <label for="start">Date of birth 
 
 <input type="date" id="start" name="trip-start"
        value="2018-07-22"
        min="2018-01-01" max="2018-12-31">
        <br>
+
+
        <label> <br>  Gender:    </label>   
          <input type="radio" id="gender" name="gender" value="male"/> Male    
          <input type="radio" id="gender" name="gender" value="female"/> Female  
+         <br>
 
+
+          <br> <label for="email"> Email ID 
+          <input type="email" id="email" pattern=".+@globex\.com" size="30" required>
+          <br>
+
+
+         <br> <label for="phone">Moblie No.</label>
+          <input type="tel" id="phone" name="phone"
+          
+          <br>
+         <br>
+          <br> <label <br> address </label> 
+           <input type="address" id="address" name="address" 
+         <br>
+         <br>
+         <br> <label <br> State </label> 
+         <input type="State" id="State" name="State" 
+       
+         <br>
+         <br>
+         <br> <label <br> City </label> 
+         <input type="City" id="City" name="City" 
+         <br>
+        <br>
+        <br>  <br> <input type="submit" value="Submit" 
+         style="text-align: center"
       </label>
+
+
 
 
 
