--- a/mlouhkia.html
+++ b/mlouhkia.html
@@ -1,6 +1,30 @@
 <html>
-
-
+<h1>Mlouhkia Reciepe</h1>
+<p> <br> <b> You will need: </b> <br>
+    <br> Cooking liquid: usually chicken broth or rabbit broth is used. You can use any broth of your choice. <br>
+    <br> Frozen Molokhia: in this recipe I've used frozen Molokhia. <br> 
+    <br> Dry coriander: preferably freshly roasted and ground coriander, the smell is more heavenly.  <br>
+    <br> Garlic: lots and lots of garlic. Some people like to mince a whole head of garlic.  <br>
+    <br>  Ghee: I love using ghee in many recipes, butter is ok as well use oil if you prefer to.  <br>
+    <br> Bullion cube: this is to add more flavor to the molokhia, you can skip it if you have none.  <br>
+    <br> Tomato sauce: This is one of the new things I've added to my recipe. It adds a hint of both tartness and sweetness. Some people add sugar some or tomato paste. if you are not used to adding tomatoes to your molokhia feel free to skip this ingredient. <br>
+    <br> Baking soda: this one is to maintain a fresh green look for your Molokhia. This is very helpful if you will be making a big batch of molokhia or you intend to keep it the the fridge for 3 days or so. Feel free to skip. <br>
+  <b> <h3> Preparation: </h3> </b>
+  <p> <br> <b>1</b> In a deep pot over medium-high heat melt ghee. <br>
+      <br> <b>2</b> Sauté garlic for 15-30 seconds.<br>
+      <br> <b>3</b> Until lightly golden and fragrant as shown in picture 3.<br>
+      <br> <b>4</b> Add coriander and keep stirring for another 30 seconds.<br>
+      <br> <b>5</b> The coriander will give its fragrance and turn a little more dark brown.<br>
+      <br> <b>6</b> Pour in some of the broth keeping the rest after we check consistency at the end.<br>
+      <br> <b>7</b> Sprinkle the bouillon cube. Stir until it is dissolved.<br>
+      <br> <b>8</b> Add the baking soda if you chose to, notice that the broth will foam.<br>
+      <br> <b>9</b> Add the Molokhia, and turn down the heat to medium low, keep stirring every now and then.<br>
+      <br> <b>10</b> Molokhia will slowly melt in the broth. Wait until it has completely melted.<br>
+      <br> <b>11</b> Pour in the tomato sauce and stir well.<br>
+      <br> <b>12</b> Check consistency: if it is too thick for your liking add more broth.<br>
+      <br> <b>13</b> Check the seasoning and sweetness: if you need salt or more tomato sauce.<br>
+      <br> <b>14</b> Serve with rice and pita bread. <br> </p> 
+</p>
 
 
 
