--- a/Pizza.html
+++ b/Pizza.html
@@ -1,1 +1,51 @@
-Pizza.html
+<html>
+    <h1>Pizza Reciepe</h1>
+<h2> Ingredients </h2>
+<p> 2 ½ cups warm water(600 mL) <br>
+    1 teaspoon sugar <br>
+    2 teaspoons active dry yeast <br>
+    7 cups all-purpose flour(875 g), plus more for dusting <br>
+    6 tablespoons extra virgin olive oil, plus more for greasing <br>
+    1 ½ teaspoons kosher salt <br>
+    ¼ cup semolina flour(30 g) <br>
+<br>
+<br>
+Preparation <br>
+<br> <b>1</b> “Bloom” the yeast by sprinkling the sugar and yeast in the warm water. Let sit for 10 minutes, until bubbles form on the surface. <br>
+
+<br>
+<b>2</b> In a large bowl, combine the flour and salt. Make a well in the middle and add the olive oil and bloomed yeast mixture. Using a spoon, mix until a shaggy dough begins to form. <br>
+<br>
+<b>3</b> Once the flour is mostly hydrated, turn the dough out onto a clean work surface and knead for 10-15 minutes. The dough should be soft, smooth, and bouncy. Form the dough into a taut round. <br>
+<br>
+<b>4</b> Grease a clean, large bowl with olive oil and place the dough inside, turning to coat with the oil. Cover with plastic wrap. Let rise for at least an hour, or up to 24 hours. <br>
+<br>
+<b>5</b >Punch down the dough and turn it out onto a lightly floured work surface. Knead for another minute or so, then cut into 4 equal portions and shape into rounds. <br>
+<br>
+<b>6</b> Lightly flour the dough, then cover with a kitchen towel and let rest for another 30 minutes to an hour while you prepare the sauce and any other ingredients. <br>
+<br>
+<b>7</b>Preheat the oven as high as your oven will allow, between 450-500˚F (230-260˚C). Place a pizza stone, heavy baking sheet (turn upside down so the surface is flat), or cast iron skillet in the oven. <br>
+<br>
+<b>8</b>  Meanwhile, make the tomato sauce: Add the salt to the can of tomatoes and puree with an immersion blender, or transfer to a blender or food processor, and puree until smooth. <br>
+<br>
+<b>9</b> Once the dough has rested, take a portion and start by poking the surface with your fingertips, until bubbles form and do not deflate. <br>
+<br>
+<b>10</b> Then, stretch and press the dough into a thin round. Make it thinner than you think it should be, as it will slightly shrink and puff up during baking. <br>
+<br>
+<b>11</b> Sprinkle semolina onto an upside down baking sheet and place the stretched crust onto it. Add the sauce and ingredients of your choice. <br>
+<br>
+<b>12</b> Slide the pizza onto the preheated pizza stone or pan. Bake for 15 minutes, or until the crust and cheese are golden brown. <br>
+<br>
+<b>13</b> Add any garnish of your preference. <br>
+<br>
+<b>14</b> Nutrition Calories: 1691 Fat: 65 grams Carbs: 211 grams Fiber: 12 grams Sugars: 60 grams Protein: 65 grams <br>
+<br>
+<b>15</b> Enjoy! <br>
+
+</p>
+
+
+
+
+
+</html>
