--- a/Home.html
+++ b/Home.html
@@ -4,8 +4,10 @@
 
 </head>
 
+<body>
+  
 
-
+    
  <a href="file:///C:/Users/Djozef/Desktop/Project%20HTML/About.html"> <h2> <br> About </br> </h2> </a> 
 
 
@@ -15,4 +17,7 @@
  <a href="file:///C:/Users/Djozef/Desktop/Project%20HTML/Subscribe.html"> <h2> <br> Subscribe </br> </h2>  </a> 
  
 
+
+
+</body>
 </html>
