--- a/Reciepes.html
+++ b/Reciepes.html
@@ -2,8 +2,19 @@
 
 <html>
 
+<body>
+  <style>
+    
+    .container
+    {
+      background: fixed;background-color: aqua;
+    }
+
+
+  </style>
 <center>
 
+  
       <a href="file:///C:/Users/Djozef/Desktop/Project%20HTML/Ojja.html"><img src="C:\Users\Djozef\Desktop\Project HTML\ojja.jpg" class="center" alt="Ojja"  style="width:500px;height:500px;"></a>
    
 </center>
@@ -28,5 +39,7 @@
 
      <br> <h2 style="text-align:center"> mlouhkia</h2>  <br
 
+
+</body>
      </html>
 
