--- a/Ojja.html
+++ b/Ojja.html
@@ -8,7 +8,9 @@
   font-size: x-large;
   text-align: center;
   flex-direction: column;
- text-decoration: underline overline #FF3028;
+  text-decoration: underline overline #FF3028;
+ border: 2mm ridge rgba(211, 220, 50, .6);
+
 }
 
 
