--- a/Home.html
+++ b/Home.html
@@ -1,23 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-
-</head>
-
-<body>
-  
-
     
- <a href="file:///C:/Users/Djozef/Desktop/Project%20HTML/About.html"> <h2> <br> About </br> </h2> </a> 
+<body>
 
+<h1 class="title"> Welcome to fantasy food </h1>
 
-<a href="file:///C:/Users/Djozef/Desktop/Project%20HTML/Reciepes.html"> <h2> <br> Reciepes </br> </h2> </a>
-   
-
- <a href="file:///C:/Users/Djozef/Desktop/Project%20HTML/Subscribe.html"> <h2> <br> Subscribe </br> </h2>  </a> 
- 
-
-
-
-</body>
-</html>
+<br>
+    <a style="text-decoration:none;color: red;text-align:center;" href="file:///C:/Users/Djozef/Desktop/Project%20HTML/About.html"> <h2> About </h2> </a>
+    <br>
+    <a style="text-decoration:none;color: red;text-align:center;" href="file:///C:/Users/Djozef/Desktop/Project%20HTML/Reciepes.html"> <h2> Reciepes </h2> </a>
+    <br>
+    <a style="text-decoration:none;color: red;text-align:center;" href="file:///C:/Users/Djozef/Desktop/Project%20HTML/Subscribe.html"> <h2> Subscribe </h2> </a>
+    
+    </body>
+    </html>
