--- a/Home.html
+++ b/Home.html
@@ -3,10 +3,10 @@
     
 <body>
 
-<h1 class="title"> Welcome to fantasy food </h1>
+<h1 style="text-align:center; background-image:url(https://us.123rf.com/450wm/prettyvectors/prettyvectors1608/prettyvectors160800022/60532577-food-background-pattern-vector-flat-cartoon-illustration.jpg?ver=6)"> Welcome to fantasy food </h1>
 
 <br>
-    <a style="text-decoration:none;color: red;text-align:center;" href="file:///C:/Users/Djozef/Desktop/Project%20HTML/About.html"> <h2> About </h2> </a>
+    <a style="text-decoration:none;color: red;text-align:center;" href="file:///C:/Users/Djozef/Desktop/Project%20HTML/About.html"> <h2 style="background-image:url(https://us.123rf.com/450wm/prettyvectors/prettyvectors1608/prettyvectors160800022/60532577-food-background-pattern-vector-flat-cartoon-illustration.jpg?ver=6)"> About </h2> </a>
     <br>
     <a style="text-decoration:none;color: red;text-align:center;" href="file:///C:/Users/Djozef/Desktop/Project%20HTML/Reciepes.html"> <h2> Reciepes </h2> </a>
     <br>
