--- a/mlouhkia.html
+++ b/mlouhkia.html
@@ -1,16 +1,22 @@
+<!DOCTYPE html>
 <html>
-<h1>Mlouhkia Reciepe</h1>
-<p> <br> <b> You will need: </b> <br>
-    <br> Cooking liquid: usually chicken broth or rabbit broth is used. You can use any broth of your choice. <br>
-    <br> Frozen Molokhia: in this recipe I've used frozen Molokhia. <br> 
-    <br> Dry coriander: preferably freshly roasted and ground coriander, the smell is more heavenly.  <br>
-    <br> Garlic: lots and lots of garlic. Some people like to mince a whole head of garlic.  <br>
-    <br>  Ghee: I love using ghee in many recipes, butter is ok as well use oil if you prefer to.  <br>
-    <br> Bullion cube: this is to add more flavor to the molokhia, you can skip it if you have none.  <br>
-    <br> Tomato sauce: This is one of the new things I've added to my recipe. It adds a hint of both tartness and sweetness. Some people add sugar some or tomato paste. if you are not used to adding tomatoes to your molokhia feel free to skip this ingredient. <br>
-    <br> Baking soda: this one is to maintain a fresh green look for your Molokhia. This is very helpful if you will be making a big batch of molokhia or you intend to keep it the the fridge for 3 days or so. Feel free to skip. <br>
-  <b> <h3> Preparation: </h3> </b>
-  <p> <br> <b>1</b> In a deep pot over medium-high heat melt ghee. <br>
+
+<body style="background-image:url(https://img.freepik.com/premium-photo/abstract-colors-backgrounds-textures-food-coloring-milk-food-coloring-milk-creating-bright-colorful-abstract-backgrounds-colorful-chemical-experiment_544249-1523.jpg); background-repeat:no-repeat; background-attachment: fixed ; background-size: cover;  ">
+
+<h1 style="text-align:center; color:green;font-size:1.5cm">  Mlouhkia Reciepe</h1>
+
+<p style="font-family:'Times New Roman', Times, serif; color: rgb(50, 134, 82);font-size:1cm ;"> <br> <b> what You will need: </b> <br> </p>
+    <p style="color:rgb(0, 0, 0); text-align:center;font-size:0.7cm"> Cooking liquid: usually chicken broth or rabbit broth is used. You can use any broth of your choice. <br>
+      <br> Frozen Molokhia: in this recipe I've used frozen Molokhia. <br>
+      <br> Dry coriander: preferably freshly roasted and ground coriander, the smell is more heavenly. <br>
+      <br> Garlic: lots and lots of garlic. Some people like to mince a whole head of garlic. <br> 
+      <br>  Ghee: I love using ghee in many recipes, butter is ok as well use oil if you prefer to. <br> 
+      <br> Bullion cube: this is to add more flavor to the molokhia, you can skip it if you have none. <br> 
+      <br>  Tomato sauce: This is one of the new things I've added to my recipe. It adds a hint of both tartness and sweetness. Some people add sugar some or tomato paste. <br> <br> if you are not used to adding tomatoes to your molokhia feel free to skip this ingredient. <br> 
+      <br> Baking soda: this one is to maintain a fresh green look for your Molokhia. <br> <br> This is very helpful if you will be making a big batch of molokhia or you intend to keep it the the fridge for 3 days or so. Feel free to skip. <br> </p>
+  
+     <h3 style="font-size:1cm; color:green;text-align:center;"> Preparation: </h3> 
+  <p style="text-align:center;font-size:0.7cm"><br> <b>1</b> In a deep pot over medium-high heat melt ghee. <br>
       <br> <b>2</b> Sauté garlic for 15-30 seconds.<br>
       <br> <b>3</b> Until lightly golden and fragrant as shown in picture 3.<br>
       <br> <b>4</b> Add coriander and keep stirring for another 30 seconds.<br>
@@ -27,6 +33,6 @@
 </p>
 
 
-
+</body>
 
 </html>
