--- a/mlouhkia.html
+++ b/mlouhkia.html
@@ -3,9 +3,9 @@
 
 <body style="background-image:url(https://img.freepik.com/premium-photo/abstract-colors-backgrounds-textures-food-coloring-milk-food-coloring-milk-creating-bright-colorful-abstract-backgrounds-colorful-chemical-experiment_544249-1523.jpg); background-repeat:no-repeat; background-attachment: fixed ; background-size: cover;  ">
 
-<h1 style="text-align:center; color:green;font-size:1.5cm">  Mlouhkia Reciepe</h1>
+<h1 style="text-align:center; color:green;font-size:1.5cm;">  Mlouhkia Reciepe</h1>
 
-<p style="font-family:'Times New Roman', Times, serif; color: rgb(50, 134, 82);font-size:1cm ;"> <br> <b> what You will need: </b> <br> </p>
+<p style="font-family:'Times New Roman', Times, serif; color: rgb(50, 134, 82);font-size:1cm; text-align:center">  <b> what You will need: </b>  </p>
     <p style="color:rgb(0, 0, 0); text-align:center;font-size:0.7cm"> Cooking liquid: usually chicken broth or rabbit broth is used. You can use any broth of your choice. <br>
       <br> Frozen Molokhia: in this recipe I've used frozen Molokhia. <br>
       <br> Dry coriander: preferably freshly roasted and ground coriander, the smell is more heavenly. <br>
